--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
 
-<center>
-  <form method="POST">
-     <br />
-     
-     <br />
-      <label>Insert your age (1-99): </label>
-      <input type="number" name="age" min="1" max="99">
-      <br />
-      <label>Insert your gender (0 for male, 1 for female): </label>
-      <input type="number" name="gender" min="0" max="1">
-      <input type="submit">
-      <br />
-      <br /><br />
-      <label>{{ href2 }} </label>
-  </form>
-</center>
+</head>
+<body>
+    <center>
+        <table border="1" width="600">
+            <tr>
+                <td colspan="2" align="center" bgcolor="lightblue">Academic Qualifications</td><td align="center" bgcolor="lightblue">Year Award</td>
+            </tr>
+            <tr>
+                <td rowspan="2" align="center" width="200">Bachelor Of Life Science</td><td align="center">Beijing Normal University</td><td align="center">2018</td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center" bgcolor="lightblue">First Class Scholarship</td>
+            </tr>
+            <tr>
+                <td rowspan="2" align="center" width="200">Master Of Education</td><td align="center">The University of Hong Kong</td><td align="center">2024</td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center" bgcolor="lightblue">To be worked on 💪🏻</td>
+            </tr>
+        </table>
+    </center>
+</body>
+</html>
